--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1,
+h2 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: rgb(13, 85, 167);
+}
+
+ul,
+p {
+  margin: 0;
+}
